--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template",
-  "version": "0.0.2",
-  "description": "A Node Typescript template",
+  "name": "shareplay-api",
+  "version": "1.0.0",
+  "description": "SharePlay media server",
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon",
@@ -9,32 +9,54 @@
     "watch": "tsc -w --pretty",
     "start": "node dist/index.js",
     "build": "rimraf ./dist && tsc --build",
-    "prettier": "prettier --write src/**/*.{js,ts,json}"
+    "prettier": "prettier --write src/**/*.{js,ts,json}",
+    "gen-env": "gen-env-types .env -o src/types/env.d.ts -e ."
   },
   "engines": {
-    "node": ">=14.x",
-    "npm": ">=7.x"
+    "node": ">=16.x",
+    "npm": ">=8.x"
   },
   "keywords": [
-    "Eslint",
-    "Typescript",
-    "Nodejs",
-    "Nodemon"
+    "ws",
+    "mediasoup",
+    "expressjs"
   ],
   "author": "ChampionBuffalo1 <primarymail@duck.com>",
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv-safe": "^8.1.6",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.9",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "gen-env-types": "^1.3.4",
     "nodemon": "^3.0.3",
     "prettier": "^3.2.4",
     "pretty-quick": "^4.0.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bufferutil": "^4.0.8",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "dotenv-safe": "^9.0.0",
+    "drizzle-orm": "^0.29.4",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "mediasoup": "^3.13.22",
+    "morgan": "^1.10.0",
+    "postgres": "^3.4.3",
+    "winston": "^3.11.0",
+    "ws": "^8.16.0",
+    "zod": "^3.22.4"
+  }
 }
